--- a/NYCTaxi.ipynb
+++ b/NYCTaxi.ipynb
@@ -1,6 +1,338 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> Import </h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import packages\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "#import for time \n",
+    "import dask.dataframe as dd\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 49s, sys: 2min 11s, total: 4min 1s\n",
+      "Wall time: 6min 48s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "#import dataset - but it is a big file. see below for this case. \n",
+    "train_df = pd.read_csv(\"train.csv\")\n",
+    "test_df = pd.read_csv(\"test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> Case of Huge CSV File </h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "CPU times: user 177 µs, sys: 82 µs, total: 259 µs\n",
+      "Wall time: 222 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# %%time will print out the CPU time and wall time \n",
+    "print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#path for train dataset\n",
+    "train_path = '../NYCTaxi/train.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exact number of rows: 55423857\n",
+      "CPU times: user 20.1 s, sys: 27.8 s, total: 47.9 s\n",
+      "Wall time: 1min 31s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "\n",
+    "#want to know the exact number of rows from the large file -> this way is a lot shorter to find how big the data is. \n",
+    "\n",
+    "#method 1 : use file.readlines \n",
+    "with open(train_path) as file:\n",
+    "    n_rows = len(file.readlines())\n",
+    "\n",
+    "print(f'Exact number of rows: {n_rows}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8.9 ms, sys: 26.1 ms, total: 35 ms\n",
+      "Wall time: 68.2 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>pickup_datetime</th>\n",
+       "      <th>pickup_longitude</th>\n",
+       "      <th>pickup_latitude</th>\n",
+       "      <th>dropoff_longitude</th>\n",
+       "      <th>dropoff_latitude</th>\n",
+       "      <th>passenger_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009-06-15 17:26:21.0000001</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2009-06-15 17:26:21 UTC</td>\n",
+       "      <td>-73.844311</td>\n",
+       "      <td>40.721319</td>\n",
+       "      <td>-73.841610</td>\n",
+       "      <td>40.712278</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010-01-05 16:52:16.0000002</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>2010-01-05 16:52:16 UTC</td>\n",
+       "      <td>-74.016048</td>\n",
+       "      <td>40.711303</td>\n",
+       "      <td>-73.979268</td>\n",
+       "      <td>40.782004</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-08-18 00:35:00.00000049</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2011-08-18 00:35:00 UTC</td>\n",
+       "      <td>-73.982738</td>\n",
+       "      <td>40.761270</td>\n",
+       "      <td>-73.991242</td>\n",
+       "      <td>40.750562</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012-04-21 04:30:42.0000001</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>2012-04-21 04:30:42 UTC</td>\n",
+       "      <td>-73.987130</td>\n",
+       "      <td>40.733143</td>\n",
+       "      <td>-73.991567</td>\n",
+       "      <td>40.758092</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010-03-09 07:51:00.000000135</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2010-03-09 07:51:00 UTC</td>\n",
+       "      <td>-73.968095</td>\n",
+       "      <td>40.768008</td>\n",
+       "      <td>-73.956655</td>\n",
+       "      <td>40.783762</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             key  fare_amount          pickup_datetime  \\\n",
+       "0    2009-06-15 17:26:21.0000001          4.5  2009-06-15 17:26:21 UTC   \n",
+       "1    2010-01-05 16:52:16.0000002         16.9  2010-01-05 16:52:16 UTC   \n",
+       "2   2011-08-18 00:35:00.00000049          5.7  2011-08-18 00:35:00 UTC   \n",
+       "3    2012-04-21 04:30:42.0000001          7.7  2012-04-21 04:30:42 UTC   \n",
+       "4  2010-03-09 07:51:00.000000135          5.3  2010-03-09 07:51:00 UTC   \n",
+       "\n",
+       "   pickup_longitude  pickup_latitude  dropoff_longitude  dropoff_latitude  \\\n",
+       "0        -73.844311        40.721319         -73.841610         40.712278   \n",
+       "1        -74.016048        40.711303         -73.979268         40.782004   \n",
+       "2        -73.982738        40.761270         -73.991242         40.750562   \n",
+       "3        -73.987130        40.733143         -73.991567         40.758092   \n",
+       "4        -73.968095        40.768008         -73.956655         40.783762   \n",
+       "\n",
+       "   passenger_count  \n",
+       "0                1  \n",
+       "1                1  \n",
+       "2                2  \n",
+       "3                1  \n",
+       "4                1  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "\n",
+    "#take a look at the train dataset\n",
+    "test_temp = pd.read_csv(train_path, nrows= 10)\n",
+    "test_temp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10 entries, 0 to 9\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   key                10 non-null     object \n",
+      " 1   fare_amount        10 non-null     float64\n",
+      " 2   pickup_datetime    10 non-null     object \n",
+      " 3   pickup_longitude   10 non-null     float64\n",
+      " 4   pickup_latitude    10 non-null     float64\n",
+      " 5   dropoff_longitude  10 non-null     float64\n",
+      " 6   dropoff_latitude   10 non-null     float64\n",
+      " 7   passenger_count    10 non-null     int64  \n",
+      "dtypes: float64(5), int64(1), object(2)\n",
+      "memory usage: 768.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#info on temp table -> to see column datatype\n",
+    "test_temp.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#change the column type to optimize for memory usage\n",
+    "traintypes = {\n",
+    "                    'fare_amount': 'float32',\n",
+    "                    'pickup_datetime': 'str',\n",
+    "                    'pickup_longitude': 'float32',\n",
+    "                    'pickup_latitude': 'float32',\n",
+    "                    'dropoff_longitude': 'float32',\n",
+    "                    'dropoff_latitude': 'float32',\n",
+    "                    'passenger_count': 'unit8'\n",
+    "}\n",
+    "\n",
+    "cols = list(traintypes.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
