gps cleaning first try

--- a/NYCTaxi.ipynb
+++ b/NYCTaxi.ipynb
@@ -4,12 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "table of contents\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
     "# Import"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Packages"
    ]
@@ -17,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#import basic packages\n",
@@ -38,7 +52,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Straight importing files (but see below for dealing with huge CSV file"
    ]
@@ -46,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# %%time\n",
@@ -58,14 +77,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Case of Huge CSV File"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Readlines"
    ]
@@ -73,15 +97,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "hello\n",
-      "CPU times: user 232 µs, sys: 163 µs, total: 395 µs\n",
-      "Wall time: 289 µs\n"
+      "CPU times: user 242 µs, sys: 100 µs, total: 342 µs\n",
+      "Wall time: 499 µs\n"
      ]
     }
    ],
@@ -95,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#path for train dataset\n",
@@ -105,15 +133,17 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Exact number of rows: 55423857\n",
-      "CPU times: user 19.2 s, sys: 29.5 s, total: 48.7 s\n",
-      "Wall time: 1min 13s\n"
+      "CPU times: user 19.2 s, sys: 31.6 s, total: 50.9 s\n",
+      "Wall time: 1min 12s\n"
      ]
     }
    ],
@@ -132,14 +162,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.1 ms, sys: 33 ms, total: 45.1 ms\n",
-      "Wall time: 130 ms\n"
+      "CPU times: user 9.55 ms, sys: 23.5 ms, total: 33.1 ms\n",
+      "Wall time: 62.5 ms\n"
      ]
     },
     {
@@ -272,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -304,7 +338,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Using Chunksize and load chunks to list"
@@ -357,15 +392,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12it [01:58,  9.87s/it]"
+      "12it [01:54,  9.54s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 38s, sys: 9.57 s, total: 1min 47s\n",
-      "Wall time: 1min 58s\n"
+      "CPU times: user 1min 34s, sys: 12.5 s, total: 1min 47s\n",
+      "Wall time: 1min 54s\n"
      ]
     },
     {
@@ -1203,7 +1238,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Feather"
@@ -1220,8 +1256,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.46 s, sys: 1.51 s, total: 3.97 s\n",
-      "Wall time: 4.12 s\n"
+      "CPU times: user 2.33 s, sys: 860 ms, total: 3.19 s\n",
+      "Wall time: 2.52 s\n"
      ]
     }
    ],
@@ -1243,8 +1279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.34 s, sys: 6.15 s, total: 7.49 s\n",
-      "Wall time: 12.2 s\n"
+      "CPU times: user 1.3 s, sys: 4.73 s, total: 6.03 s\n",
+      "Wall time: 8.41 s\n"
      ]
     }
    ],
@@ -1279,8 +1315,8 @@
       " 6   passenger_count    uint8              \n",
       "dtypes: datetime64[ns, UTC](1), float32(5), uint8(1)\n",
       "memory usage: 1.5 GB\n",
-      "CPU times: user 7.05 ms, sys: 7.38 ms, total: 14.4 ms\n",
-      "Wall time: 30.7 ms\n"
+      "CPU times: user 11.6 ms, sys: 13.7 ms, total: 25.3 ms\n",
+      "Wall time: 251 ms\n"
      ]
     }
    ],
@@ -1306,15 +1342,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Fare_amount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "code_folding": [],
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1444,7 +1485,7 @@
        "max        3.537133e+03     2.080000e+02  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,8 +1497,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1487,16 +1529,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Passenger_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {
     "code_folding": [],
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -2193,7 +2238,7 @@
        "44288494              208  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2212,8 +2257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2404,7 +2451,7 @@
        "[69 rows x 7 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2416,15 +2463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Old size 55421402\n",
-      "New size 55421333\n"
+      "Old size: 55421402\n",
+      "New size: 55421333\n"
      ]
     }
    ],
@@ -2442,15 +2491,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Null"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2465,7 +2518,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2477,8 +2530,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2503,9 +2558,333 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Geo coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q4. do all the coordinates make sense? \n",
+    "#longitude range: -90 to 90 / longitude range: -180 to 180\n",
+    "#see if any coordinate out of this\n",
+    "print(len(df[(df.pickup_longitude >180) | (df.pickup_longitude < -180)]))\n",
+    "print(len(df[(df.dropoff_longitude >180) | (df.dropoff_longitude < -180)]))\n",
+    "print(len(df[(df.pickup_latitude >90) | (df.pickup_latitude < -90)]))\n",
+    "print(len(df[(df.dropoff_latitude >90) | (df.dropoff_latitude < -90)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old size: 55420957\n",
+      "New size: 55418213\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get rid of the ones from above\n",
+    "#before\n",
+    "print('Old size: %d' %len(df))\n",
+    "\n",
+    "#get rid of ones outside of range\n",
+    "df = df[(df.pickup_longitude <= 180) & (df.pickup_longitude >= -180)&(df.dropoff_longitude <= 180) & (df.dropoff_longitude >= -180)&(df.pickup_latitude <= 90) & (df.pickup_latitude >= -90)&(df.dropoff_latitude <= 90) & (df.dropoff_latitude >= -90)] \n",
+    "\n",
+    "#after\n",
+    "print('New size: %d' %len(df))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "#after... to check.\n",
+    "print(len(df[(df.pickup_longitude >180) | (df.pickup_longitude < -180)]))\n",
+    "print(len(df[(df.dropoff_longitude >180) | (df.dropoff_longitude < -180)]))\n",
+    "print(len(df[(df.pickup_latitude >90) | (df.pickup_latitude < -90)]))\n",
+    "print(len(df[(df.dropoff_latitude >90) | (df.dropoff_latitude < -90)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum Pickup Longtitude is: -171.79734802246094\n",
+      "Minimum Dropoff Longtitude is: -173.95762634277344\n",
+      "Minimum Pickup Latitude is: -77.83387756347656\n",
+      "Minimum Dropoff Latitude is: -74.3546142578125\n",
+      "Maximum Pickup Longtitude is: 169.97276306152344\n",
+      "Maximum Dropoff Longtitude is: 169.97276306152344\n",
+      "Maximum Pickup Latitude is: 89.7421646118164\n",
+      "Maximum Dropoff Latitude is: 89.81666564941406\n"
+     ]
+    }
+   ],
+   "source": [
+    "#minimum\n",
+    "print('Minimum Pickup Longtitude is: %s' %df.pickup_longitude.min())\n",
+    "print('Minimum Dropoff Longtitude is: %s' %df.dropoff_longitude.min())\n",
+    "print('Minimum Pickup Latitude is: %s' %df.pickup_latitude.min())\n",
+    "print('Minimum Dropoff Latitude is: %s' %df.dropoff_latitude.min())\n",
+    "\n",
+    "#maximum\n",
+    "print('Maximum Pickup Longtitude is: %s' %df.pickup_longitude.max())\n",
+    "print('Maximum Dropoff Longtitude is: %s' %df.dropoff_longitude.max())\n",
+    "print('Maximum Pickup Latitude is: %s' %df.pickup_latitude.max())\n",
+    "print('Maximum Dropoff Latitude is: %s' %df.dropoff_latitude.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>pickup_datetime</th>\n",
+       "      <th>pickup_longitude</th>\n",
+       "      <th>pickup_latitude</th>\n",
+       "      <th>dropoff_longitude</th>\n",
+       "      <th>dropoff_latitude</th>\n",
+       "      <th>passenger_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>98652</th>\n",
+       "      <td>10.50</td>\n",
+       "      <td>2011-05-03 07:45:00+00:00</td>\n",
+       "      <td>-78.083328</td>\n",
+       "      <td>40.705727</td>\n",
+       "      <td>-74.005318</td>\n",
+       "      <td>40.728592</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210060</th>\n",
+       "      <td>3.15</td>\n",
+       "      <td>2010-07-07 15:15:00+00:00</td>\n",
+       "      <td>-121.391212</td>\n",
+       "      <td>38.504444</td>\n",
+       "      <td>-121.391251</td>\n",
+       "      <td>38.504429</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367368</th>\n",
+       "      <td>4.10</td>\n",
+       "      <td>2010-10-19 00:39:00+00:00</td>\n",
+       "      <td>-78.650909</td>\n",
+       "      <td>41.037525</td>\n",
+       "      <td>-78.659447</td>\n",
+       "      <td>40.971840</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411093</th>\n",
+       "      <td>4.50</td>\n",
+       "      <td>2012-08-06 11:25:00+00:00</td>\n",
+       "      <td>-80.616669</td>\n",
+       "      <td>40.780685</td>\n",
+       "      <td>-73.970535</td>\n",
+       "      <td>40.789158</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429196</th>\n",
+       "      <td>13.00</td>\n",
+       "      <td>2013-03-13 18:14:00+00:00</td>\n",
+       "      <td>-78.669426</td>\n",
+       "      <td>43.213963</td>\n",
+       "      <td>-78.669426</td>\n",
+       "      <td>43.213963</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55203539</th>\n",
+       "      <td>7.30</td>\n",
+       "      <td>2012-06-29 10:50:00+00:00</td>\n",
+       "      <td>-92.199997</td>\n",
+       "      <td>40.773121</td>\n",
+       "      <td>-73.959877</td>\n",
+       "      <td>40.763699</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55260154</th>\n",
+       "      <td>13.30</td>\n",
+       "      <td>2011-12-04 16:48:00+00:00</td>\n",
+       "      <td>-87.996002</td>\n",
+       "      <td>47.958843</td>\n",
+       "      <td>-73.953056</td>\n",
+       "      <td>40.788559</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55363580</th>\n",
+       "      <td>8.10</td>\n",
+       "      <td>2012-07-09 22:04:00+00:00</td>\n",
+       "      <td>-92.233330</td>\n",
+       "      <td>40.768604</td>\n",
+       "      <td>-73.954948</td>\n",
+       "      <td>40.779205</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55379147</th>\n",
+       "      <td>14.50</td>\n",
+       "      <td>2013-07-21 18:08:00+00:00</td>\n",
+       "      <td>-82.384224</td>\n",
+       "      <td>38.148434</td>\n",
+       "      <td>-73.954887</td>\n",
+       "      <td>40.769314</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55404571</th>\n",
+       "      <td>3.50</td>\n",
+       "      <td>2013-04-14 14:09:00+00:00</td>\n",
+       "      <td>-79.710701</td>\n",
+       "      <td>42.197189</td>\n",
+       "      <td>-79.710701</td>\n",
+       "      <td>42.197189</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>667 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          fare_amount           pickup_datetime  pickup_longitude  \\\n",
+       "98652           10.50 2011-05-03 07:45:00+00:00        -78.083328   \n",
+       "210060           3.15 2010-07-07 15:15:00+00:00       -121.391212   \n",
+       "367368           4.10 2010-10-19 00:39:00+00:00        -78.650909   \n",
+       "411093           4.50 2012-08-06 11:25:00+00:00        -80.616669   \n",
+       "429196          13.00 2013-03-13 18:14:00+00:00        -78.669426   \n",
+       "...               ...                       ...               ...   \n",
+       "55203539         7.30 2012-06-29 10:50:00+00:00        -92.199997   \n",
+       "55260154        13.30 2011-12-04 16:48:00+00:00        -87.996002   \n",
+       "55363580         8.10 2012-07-09 22:04:00+00:00        -92.233330   \n",
+       "55379147        14.50 2013-07-21 18:08:00+00:00        -82.384224   \n",
+       "55404571         3.50 2013-04-14 14:09:00+00:00        -79.710701   \n",
+       "\n",
+       "          pickup_latitude  dropoff_longitude  dropoff_latitude  \\\n",
+       "98652           40.705727         -74.005318         40.728592   \n",
+       "210060          38.504444        -121.391251         38.504429   \n",
+       "367368          41.037525         -78.659447         40.971840   \n",
+       "411093          40.780685         -73.970535         40.789158   \n",
+       "429196          43.213963         -78.669426         43.213963   \n",
+       "...                   ...                ...               ...   \n",
+       "55203539        40.773121         -73.959877         40.763699   \n",
+       "55260154        47.958843         -73.953056         40.788559   \n",
+       "55363580        40.768604         -73.954948         40.779205   \n",
+       "55379147        38.148434         -73.954887         40.769314   \n",
+       "55404571        42.197189         -79.710701         42.197189   \n",
+       "\n",
+       "          passenger_count  \n",
+       "98652                   1  \n",
+       "210060                  3  \n",
+       "367368                  1  \n",
+       "411093                  2  \n",
+       "429196                  1  \n",
+       "...                   ...  \n",
+       "55203539                1  \n",
+       "55260154                1  \n",
+       "55363580                2  \n",
+       "55379147                1  \n",
+       "55404571                1  \n",
+       "\n",
+       "[667 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#NYC gps coordinate is: Lat: 40.741895 and Long: -73.989308 so something is off about above numbers\n",
+    "df[df.pickup_longitude <-78]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
